--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@zeit/next-css": "^1.0.1",
     "apollo-boost": "^0.3.1",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-styled-components": "^1.10.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
@@ -34,6 +35,7 @@
     "react-apollo": "^2.5.2",
     "react-apollo-hooks": "^0.4.3",
     "react-content-loader": "^4.2.1",
-    "react-dom": "^16.8.4"
+    "react-dom": "^16.8.4",
+    "styled-components": "^4.2.0"
   }
 }
