add/remove from favorites

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
   "rules": {
     "react/react-in-jsx-scope": "off",
     "react/jsx-filename-extension": "off",
+
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
 
@@ -42,5 +43,9 @@
     ],
     "lodash-fp/preferred-alias": "off",
     "lodash-fp/use-fp": "error"
+  },
+  "env": {
+    "browser": true,
+    "node": true
   }
 }
