--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "@material/react-material-icon": "^0.11.0",
     "@material/react-top-app-bar": "^0.11.0",
     "@material/react-typography": "^0.11.0",
+    "@types/next": "^8.0.3",
+    "@types/node": "^11.13.0",
+    "@types/react": "^16.8.10",
+    "@types/styled-components": "^4.1.12",
     "@zeit/next-css": "^1.0.1",
+    "@zeit/next-typescript": "^1.1.1",
     "apollo-boost": "^0.3.1",
     "babel-eslint": "^10.0.1",
     "babel-plugin-styled-components": "^1.10.0",
