--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material/react-material-icon": "^0.11.0",
     "@material/react-top-app-bar": "^0.11.0",
     "@material/react-typography": "^0.11.0",
+    "@types/lodash": "^4.14.123",
     "@types/next": "^8.0.3",
     "@types/node": "^11.13.0",
     "@types/react": "^16.8.10",
