--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "cfop",
   "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -23,6 +23,7 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "apollo-boost": "^0.3.1",
+    "apollo-cache-persist": "^0.1.1",
     "babel-eslint": "^10.0.1",
     "babel-plugin-styled-components": "^1.10.0",
     "eslint": "^5.3.0",
@@ -32,12 +33,14 @@
     "eslint-plugin-lodash-fp": "^2.2.0-a1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-hooks": "^1.5.1",
+    "express": "^4.16.4",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
+    "http-proxy-middleware": "^0.19.1",
     "isomorphic-unfetch": "^3.0.0",
     "lodash": "^4.17.11",
     "next": "^8.0.3",
-    "prop-types": "^15.7.2",
+    "next-offline": "^3.3.7",
     "react": "^16.8.4",
     "react-apollo": "^2.5.2",
     "react-apollo-hooks": "^0.4.3",
